--- a/blog/Jenkinsfile
+++ b/blog/Jenkinsfile
@@ -3,39 +3,40 @@ node {
     stage('Checkout code') {
         checkout scm
     }
+//            export IMAGE="${env.BUILD_NUMBER}"
     withEnv(['HOST=eu.gcr.io/crafty-clover-301509/unoterr1/blog_comp:']){
         stage('Build and Push') {
             sh "#!/bin/zsh \n" +
             """
             export HOST="${env.HOST}"
-            export IMAGE="${env.BUILD_NUMBER}"
+            export IMAGE="latest"
             cd blog && envsubst < docker-tmp.yml > docker-compose.yml 
             docker-compose build blog
             docker-compose push blog
             """.stripIndent()
         }
     }
-    stage('Push') {
-//        sh """docker-compose push blog"""
-//        docker.withRegistry('https://registry.hub.docker.com/', 'hub') {    
-//        docker.withRegistry('http://localhost:55001/') {        
-//          app.push("${env.BUILD_NUMBER}")   
-//          app.push("latest")        
-//            }    
-        }
-
+    stage('Create cluster') {
+        sh """
+        cd terraform/cluster
+        terraform init
+        terraform apply
+        """
+    }
+    stage('Deploy') {
+        sh """
+        cd terraform/k8s
+        terraform init
+        terraform apply
+        """
+    }
+/*
     withCredentials([string(credentialsId: 'HOST', variable: 'HOST'),
         string(credentialsId: 'USER', variable: 'USER'),
         string(credentialsId: 'PASS', variable: 'PASS'),
         string(credentialsId: 'NAME', variable: 'NAME')]) {
             stage('Deploy App') {
-//       sh 'minikube start'
-//        sh 'eval $(minikube docker-env)' //Configure environment to use minikube’s Docker daemon
-//            sh "cd blog && python3 secret.py ${env.NAME} ${env.PASS} ${env.DB} ${env.HOST}" 
-//            sh "cd blog && kubectl apply -f mysecret.yaml"
 
-//          sh "cd blog && python3 version.py ${env.BUILD_NUMBER}" 
-//          sh 'cd blog && kubectl patch deployment blog --patch "$(cat patch.yaml)"'
 
             sh """
             export IMAGE="${env.BUILD_NUMBER}"
@@ -43,13 +44,7 @@ node {
             kubectl apply -f blog_tmp.yaml
             """.stripIndent()
 
-//       The following section is done manually because db deployment and services
-//       in this case do not need to be recreated everytime because no changes are introduced to them.
-
-//       sh 'cd blog && kubectl apply -f service_db.yaml'
-//       sh 'cd blog && kubectl apply -f service_blog.yaml'
-//       sh 'cd blog && kubectl apply -f db.yaml'
-
         }
     }
+*/
 }
