--- a/blog/Jenkinsfile
+++ b/blog/Jenkinsfile
@@ -15,10 +15,10 @@ node {
                 """.stripIndent()
             }
         }
-    }
+    }   /*
     stage('Plan') {
         dir('blog/terraform/all') {
-            sh 'rm terraform.tfstate*'
+           // sh 'rm terraform.tfstate*'
             sh 'terraform init -input=false'
             sh "terraform plan -input=false -out tfplan -var 'image=${image}'"
             sh 'terraform show -no-color tfplan'
@@ -28,5 +28,12 @@ node {
         dir('blog/terraform/all') {
                 sh "terraform apply -auto-approve tfplan"
             }
-        }   
+        }   */
+            stage('Destroy') {
+        dir('blog/terraform/all') {
+                sh "terraform destroy"
+                sh "terraform destroy"
+                sh "terraform destroy"
+            }
+        } 
 }
