--- a/blog/Jenkinsfile
+++ b/blog/Jenkinsfile
@@ -32,9 +32,9 @@ node {
         }   */
             stage('Destroy') {
         dir('blog/terraform/all') {
-                sh "terraform destroy"
-                sh "terraform destroy"
-                sh "terraform destroy"
+                sh "terraform destroy -auto-approve"
+                sh "terraform destroy -auto-approve"
+                sh "terraform destroy -auto-approve"
             }
         } 
 }
