--- a/blog/ingress.yaml
+++ b/blog/ingress.yaml
@@ -11,6 +11,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: blog-service
+                name: app
                 port:
                   number: 80
