--- a/blog/ingress.yaml
+++ b/blog/ingress.yaml
@@ -1,7 +1,7 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: v1
 kind: Ingress
 metadata:
-  name: ingress-test
+  name: ingress
 spec:
   rules:
     - host: lubie.zycie
