--- a/blog/Jenkinsfile
+++ b/blog/Jenkinsfile
@@ -1,4 +1,4 @@
-node { 
+node { /*
     image = sh (script: 'git rev-parse --short HEAD', returnStdout: true).trim()
     host = 'eu.gcr.io/terraformar/unoterr1/blog_comp:'
    
@@ -28,5 +28,10 @@ node {
         dir('blog/terraform/all') {
                 sh "terraform apply -auto-approve tfplan"
             }
-        }  
+        }  */
+        stage('Show') {
+        dir('blog/terraform/all') {
+                sh "terraform show"
+            }
+        }
 }
