--- a/blog/terraform/all/ingress.yaml
+++ b/blog/terraform/all/ingress.yaml
@@ -4,11 +4,9 @@ metadata:
   name: ingress
 spec:
   rules:
-      http:
+    - http:
         paths:
           - path: /
             backend:
-              service:
-                name: app
-                port:
-                  number: 80
+              serviceName: app
+              servicePort: 3000
