--- a/blog/.gitignore
+++ b/blog/.gitignore
@@ -43,4 +43,4 @@ yarn-debug.log*
 .env
 mysecrets.yaml
 blog/terraform/cluster/cred.json
-blog/terraform/all/mysecrets.yaml
+#blog/terraform/all/mysecrets.yaml
