--- a/blog/terraform/all/blog.yaml
+++ b/blog/terraform/all/blog.yaml
@@ -32,5 +32,5 @@ spec:
             secretKeyRef:
               name: mysecret
               key: DATABASE_PASSWORD
-        - ports:
+        ports:
           - containerPort: 3000
