--- a/blog/terraform/all/blog.yaml
+++ b/blog/terraform/all/blog.yaml
@@ -26,7 +26,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mysecret
-              key: DATABASE_NAME
+              key: DATABASE_USERNAME
         - name: DATABASE_PASSWORD
           valueFrom:
             secretKeyRef:
